Added new experiments

--- a/ECG classifier.ipynb
+++ b/ECG classifier.ipynb
@@ -357,6 +357,11 @@
     "        val_f1_score = f1_score(val_labels, val_predictions)\n",
     "        val_f1s.append(val_f1_score)\n",
     "        \n",
+    "        if val_f1_score == max(val_f1s):\n",
+    "            torch.save(model.state_dict(), 'Siddharth_fc1000_hif1.pth')\n",
+    "        if val_loss == min(val_losses):\n",
+    "            torch.save(model.state_dict(), 'Siddharth_fc1000_minls.pth')\n",
+    "\n",
     "        print(f\"Epoch {epoch+1}/{epochs}, \"\n",
     "      f\"Train Loss: {train_loss:.4f}, \"\n",
     "      f\"Train Accuracy: {train_accuracy:.4f}, \"\n",
@@ -656,9 +661,7 @@
    "execution_count": 240,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "torch.save(model.state_dict(), 'Siddharth_fc1000.pth')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
